used flex, gap, and margin to fix alignments

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,6 +9,10 @@ body {
 }
 
 .header {
+  display: flex;
+  padding: 8px;
+  gap: 16px;
+  align-items: center;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
@@ -30,11 +34,13 @@ body {
 }
 
 button {
+  margin-left: auto;
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  height: 30px;
 }
 
 a {
@@ -44,5 +50,8 @@ a {
 }
 
 ul {
+  display: flex;
+  margin: -35px;
+  gap: 16px;
   list-style-type: none;
 }
